# GeoPulse

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py  aggregator.py  earthquake_models.py  earthquake_provider.py  flight_enrichment.py  flight_routes.py  main.py  mock_data.py  models.py  providers.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CesiumGlobe.css  CesiumGlobe.jsx  EarthquakeGlobe.css  EarthquakeGlobe.jsx  EarthquakeInfo.css  EarthquakeInfo.jsx  FlightGlobe.css  FlightGlobe.jsx  FlightInfo.css  FlightInfo.jsx  FlightMap.css  FlightMap.jsx  GoogleFlightMap.css  GoogleFlightMap.jsx  Header.css  Header.jsx  LoadingScreen.css  LoadingScreen.jsx
frontend/src/hooks/: useEarthquakes.js  useFlights.js
